dump.txt
engine.cpp: In function 'void saveToRelationalTable()':
engine.cpp:65:13: error: 'Person' was not declared in this scope
  for(vector<Person>::iterator it = people.begin(); it != people.end(); it++){
             ^
engine.cpp:65:19: error: template argument 1 is invalid
  for(vector<Person>::iterator it = people.begin(); it != people.end(); it++){
                   ^
engine.cpp:65:19: error: template argument 2 is invalid
engine.cpp:65:31: error: invalid type in declaration before 'it'
  for(vector<Person>::iterator it = people.begin(); it != people.end(); it++){
                               ^
engine.cpp:65:31: error: expected ';' before 'it'
engine.cpp:65:31: error: 'it' was not declared in this scope
engine.cpp:65:36: error: 'people' was not declared in this scope
  for(vector<Person>::iterator it = people.begin(); it != people.end(); it++){
                                    ^
engine.cpp:65:70: error: expected ')' before ';' token
  for(vector<Person>::iterator it = people.begin(); it != people.end(); it++){
                                                                      ^
engine.cpp:65:72: error: 'it' was not declared in this scope
  for(vector<Person>::iterator it = people.begin(); it != people.end(); it++){
                                                                        ^
engine.cpp:65:76: error: expected ';' before ')' token
  for(vector<Person>::iterator it = people.begin(); it != people.end(); it++){
                                                                            ^
engine.cpp:68:13: error: 'Relation' was not declared in this scope
  for(vector<Relation>::iterator it = relationTable.begin(); it != relationTable.end(); it++){
             ^
engine.cpp:68:21: error: template argument 1 is invalid
  for(vector<Relation>::iterator it = relationTable.begin(); it != relationTable.end(); it++){
                     ^
engine.cpp:68:21: error: template argument 2 is invalid
engine.cpp:68:33: error: invalid type in declaration before 'it'
  for(vector<Relation>::iterator it = relationTable.begin(); it != relationTable.end(); it++){
                                 ^
engine.cpp:68:33: error: expected ';' before 'it'
engine.cpp:68:38: error: 'relationTable' was not declared in this scope
  for(vector<Relation>::iterator it = relationTable.begin(); it != relationTable.end(); it++){
                                      ^
engine.cpp:68:86: error: expected ')' before ';' token
  for(vector<Relation>::iterator it = relationTable.begin(); it != relationTable.end(); it++){
                                                                                      ^
engine.cpp:68:92: error: expected ';' before ')' token
  for(vector<Relation>::iterator it = relationTable.begin(); it != relationTable.end(); it++){
                                                                                            ^
engine.cpp: At global scope:
engine.cpp:76:13: error: variable or field 'skipWS' declared void
 void skipWS(istream &is){
             ^
engine.cpp:76:13: error: 'istream' was not declared in this scope
engine.cpp:76:13: note: suggested alternative:
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\localefwd.h:41:0,
                 from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\string:43,
                 from engine.cpp:3:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\iosfwd:133:33: note:   'std::istream'
   typedef basic_istream<char>   istream;
                                 ^
engine.cpp:76:22: error: 'is' was not declared in this scope
 void skipWS(istream &is){
                      ^
